# flights-optimizer

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/flights_optimizer/: __init__.py  cli.py  history.py  live_search.py  models.py  optimizer.py  scoring.py  trip_optimizer.py
tests/: test_scoring.py  test_trip_optimizer.py
